projects gallery style overflow  fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,42 @@
     --back-switch: 0deg;
 }
 
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-moz-scrollbar {
+    width: 8px;
+}
+::-ms-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(214, 232, 227);
+}
+::-moz-scrollbar-thumb {
+    background-color: rgb(214, 232, 227);
+}
+::-ms-scrollbar-thumb {
+    background-color: rgb(214, 232, 227);
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgb(37, 52, 48);
+    border-right: 1px solid rgb(27, 27, 27);
+    border-left: 1px solid rgb(27, 27, 27);
+}
+::-moz-scrollbar-track {
+    background-color: rgb(37, 52, 48);
+    border-right: 1px solid rgb(27, 27, 27);
+    border-left: 1px solid rgb(27, 27, 27);
+}
+::-ms-scrollbar-track {
+    background-color: rgb(37, 52, 48);
+    border-right: 1px solid rgb(27, 27, 27);
+    border-left: 1px solid rgb(27, 27, 27);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -88,18 +124,12 @@ body {
 }
 
 .face {
-    /* background-color: rgb(30, 30, 30); */
-    /* rgb(25, 25, 25) */
-
     background-color: rgb(37, 52, 48);
     color: white;
     transform: rotate3d(0, 1, 0, 180deg);
 }
 
 .back {
-    /* background-color: rgb(250, 250, 250); */
-    /* rgb(245, 245, 245) */
-
     background-color: rgb(214, 232, 227);
 }
 
@@ -749,7 +779,50 @@ main {
     color: whitesmoke;
     background-color: #242424;
     border-radius: 1vh 6vh 1vh 1vh;
-    font-size: calc(var(--part) * 0.21);
+    font-size: calc(var(--part) * 0.2);
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.proj_decriber::-webkit-scrollbar {
+    width: 5px;
+}
+.proj_decriber::-moz-scrollbar-thumb {
+    width: 5px;
+}
+.proj_decriber::-ms-scrollbar-thumb {
+    width: 5px;
+}
+
+.proj_decriber::-webkit-scrollbar-thumb {
+    background-color: #444444;
+    border-radius: 5px;
+}
+.proj_decriber::-moz-scrollbar-thumb {
+    background-color: #444444;
+    border-radius: 5px;
+}
+.proj_decriber::-ms-scrollbar-thumb {
+    background-color: #444444;
+    border-radius: 5px;
+}
+
+.proj_decriber::-webkit-scrollbar-track {
+    margin: 6vh;
+    background-color: #242424;
+}
+.proj_decriber::-moz-scrollbar-track {
+    margin: 6vh;
+    background-color: #242424;
+}
+.proj_decriber::-ms-scrollbar-track {
+    margin: 6vh;
+    background-color: #242424;
+}
+
+.proj_decriber p {
+    padding-bottom: 0.5em;
+    line-height: 1.4em;
 }
 
 .proj_decriber a {
@@ -809,7 +882,14 @@ main {
         width: 76vw;
         top: 54vh;
         padding: 2vh;
-        font-size: calc(var(--part) * 0.33);
+        font-size: calc(var(--part) * 0.25);
+        border-radius: 1vh 1vh 1vh 6vh;
+    }
+}
+
+@media screen and (orientation: landscape) and (max-width: 768px) {
+    .proj_decriber {
+        font-size: calc(var(--part) * 0.25);
     }
 }
 
